salesforce/force-app/main/default/objects/CLM_Contract__c/CLM_Contract__c.object-meta.xml
<CustomObject>
    <description>The contract lifecycle as the CLM reports it back: status, version, signature and PO eligibility.</description>
    <label>CLM Contract</label>
    <nameField>
        <displayFormat>CLM-{0000}</displayFormat>
        <label>Contract Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLM Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>