salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>