salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Contract Reference</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>