salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>In Negotiation</fullName>
                </value>
                <value>
                    <fullName>Exception Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Ready for Signature</fullName>
                </value>
                <value>
                    <fullName>Signature Pending</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Amendment in Progress</fullName>
                </value>
                <value>
                    <fullName>Renewal in Progress</fullName>
                </value>
                <value>
                    <fullName>Expiring</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Termination in Progress</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>