salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Contract_Template__c.field-meta.xml
<CustomField>
    <fullName>Contract_Template__c</fullName>
    <label>Contract Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>