salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <label>Current Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>