salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Executed_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Executed_Document_URL__c</fullName>
    <label>Executed Document URL</label>
    <type>Url</type>
</CustomField>