salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Last_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Last_Milestone__c</fullName>
    <label>Last Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>