salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Supplier_Onboarding__c</referenceTo>
    <relationshipLabel>CLM Contracts</relationshipLabel>
    <relationshipName>CLM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>