salesforce/force-app/main/default/objects/CLM_Contract__c/fields/PO_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>PO_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Eligibility</label>
    <type>Checkbox</type>
</CustomField>