salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Signature_Status__c</fullName>
    <label>Signature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Partially Signed</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>