salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CLM Contracts</relationshipLabel>
    <relationshipName>CLM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>