salesforce/force-app/main/default/objects/CLM_Contract__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <label>Template Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>