salesforce/force-app/main/default/objects/CLM_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Reference__c</columns>
    <columns>Supplier__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Current_Version__c</columns>
    <columns>PO_Eligibility__c</columns>
    <columns>Last_Sync__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>